tests/lean/cast1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'cast'
  Imported 'Int'
  Assumed: vector
  Assumed: N0
  Proved: V0
  Assumed: f
  Assumed: m
  Assumed: v1
cast1.lean:13:7: error: type mismatch at application
    f m v1
Function type:
    ∀ (n : ℕ), vector ℤ n → ℤ
Arguments types:
    m : ℕ
    v1 : vector ℤ (m + 0)
f m (cast (V0 ℤ m) v1) : ℤ
